--- a/packaging/deb/debian/changelog
+++ b/packaging/deb/debian/changelog
@@ -1,5 +1,5 @@
-swift-sftp (1.1) unstable; urgency=low
+swift-sftp (1.1.1) unstable; urgency=low
 
-  * Initial release.
+  * Add config file support
 
- -- Hironobu Saito <hiro@hironobu.org>  Sat, 01 Dec 2018 00:00:00 +0900
+ -- Hironobu Saito <hiro@hironobu.org>  Mon, 10 Dec 2018 13:00:00 +0900
